// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormButtons > should adjust offset if input is focused in lg 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none mb-14 sm:mb-0"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should adjust offset if input is focused in md 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none mb-14 sm:mb-0"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should adjust offset if input is focused in sm 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should adjust offset if input is focused in xl 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none mb-14 sm:mb-0"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should adjust offset if input is focused in xs 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in lg 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none mb-14 sm:mb-0"
  >
    button
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in md 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none mb-14 sm:mb-0"
  >
    button
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in sm 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none mb-14 sm:mb-0"
  >
    button
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in xl 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none mb-14 sm:mb-0"
  >
    button
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in xs 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-x-0 bottom-0 flex gap-3 bg-theme-background px-8 py-3 shadow-footer-smooth dark:bg-black dark:shadow-footer-smooth-dark sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none mb-14 sm:mb-0"
  >
    button
  </div>
</DocumentFragment>
`;
